fixed styling of project previews where text overflow was pushing a link off of the bottom

--- a/backend/public/assets/css/styles.css
+++ b/backend/public/assets/css/styles.css
@@ -6,6 +6,7 @@
   --btn-primary-active: #334155;
   --text-primary: #f1f5f9;
   --text-secondary: #ffffff;
+  --text-muted: #94a3b8;
   --dropdown-bg: #334155;
   --btn-danger: #f87171;
   --btn-danger-hover: #ef4444;
@@ -254,6 +255,8 @@ header {
   border: none;
   color: inherit;
 }
+
+
 
 /* toastUtils */
 
